cli/tests/expand/invalid_usage/flatten_command_without_clappen.fail.rs

fn main(){
    #[clappen::__clappen_struct(prefix = "nested")]
    #[derive(clap::Args)]
    pub struct MyStruct {}

    #[clappen::__clappen_struct(prefix = "test")]
    #[derive(clap::Args)]
    pub struct ServerOptions {
        /// Address to connect to.
        ///
        address: String,

        /// Do you need to say hello?.
        ///
        config: Option<bool>,

        /// A nested struct that needs a prefix.
        ///
        #[command(flatten)]
        nested: NestedMyStruct,
    }
}

